# batpak

./: .dockerignore  .gitattributes  .gitignore  000_REPO_MAP.md  001_BATPAK_SUBSTRATE.md  002_SYNCBAT.md  002_SYNCBAT_RUNTIME.md  003_CLAWBAT.md  003_CLAWBAT_KIT.md  003_NETBAT_NETWORK.md  010_USER_GUIDE.md  01_FACTORY.md  020_TECHNICAL_REFERENCE.md  030_RELEASE_RUNBOOK.md  03_INVARIANTS.md  041_TESTING_LEDGER.md  04_BATTERIES.md  06_EVENTS.md  07_RECEIPTS.md  080_EVIDENCE_REPORTS.md  099_DECISION_INDEX.md  100_ADR_0026_PRE_1_0_PUBLIC_SURFACE_STRATEGY.md  100_ADR_0027_SNAPSHOT_EVIDENCE_REPORT_V1.md  100_ADR_0028_SYNCBAT_RUNTIME_CONTRACT.md  100_ADR_0029_NETBAT_BOUNDARY_CONTRACT.md  10_PROJECTIONS.md  11_INTEGRATION.md  12_CONFORMANCE.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONFORMANCE.md  CONTRIBUTING.md  Cargo.toml  DELIVERY_NOTES.md  DOCS.md  FACTORY.md  FINAL_RECONCILIATION.md  (+21 more)
bpk-lib/crates/core/fixtures/downstream-conformance/: Cargo.toml
bpk-lib/crates/core/fixtures/downstream-conformance/src/: lib.rs
bpk-lib/crates/core/fixtures/downstream-conformance/tests/: run_corpus.rs
bpk-lib/crates/macbat/: .gitignore  Cargo.toml  README.md
bpk-lib/crates/macbat/compiler/: Cargo.toml
bpk-lib/crates/macbat/compiler/examples/: expand.rs
bpk-lib/crates/macbat/compiler/specimens/error/boxed_source/: contract.ir  decl.rs  expanded.rs  expansion.norm
bpk-lib/crates/macbat/compiler/specimens/error/coordinate_error/: contract.ir  decl.rs  expanded.rs  expansion.norm
bpk-lib/crates/macbat/compiler/specimens/error/from_variant/: contract.ir  decl.rs  expanded.rs  expansion.norm
bpk-lib/crates/macbat/compiler/specimens/error/named_and_specs/: contract.ir  decl.rs  expanded.rs  expansion.norm
bpk-lib/crates/macbat/compiler/specimens/error/positional_args/: contract.ir  decl.rs  expanded.rs  expansion.norm
bpk-lib/crates/macbat/compiler/specimens/error/unit_variant/: contract.ir  decl.rs  expanded.rs  expansion.norm
bpk-lib/crates/macbat/compiler/specimens/event/default_version/: contract.ir  decl.rs  expanded.rs  expansion.norm
bpk-lib/crates/macbat/compiler/specimens/event/max_type_id/: contract.ir  decl.rs  expanded.rs  expansion.norm
bpk-lib/crates/macbat/compiler/specimens/event/minimal_store/: contract.ir  decl.rs  expanded.rs  expansion.norm
bpk-lib/crates/macbat/compiler/specimens/event/versioned/: contract.ir  decl.rs  expanded.rs  expansion.norm
bpk-lib/crates/macbat/compiler/specimens/operation/status_stream/: contract.ir  decl.rs  expanded.rs  expansion.norm
bpk-lib/crates/macbat/compiler/specimens/operation/with_effect_row/: contract.ir  decl.rs  expanded.rs  expansion.norm
bpk-lib/crates/macbat/compiler/specimens/operation/with_register/: contract.ir  decl.rs  expanded.rs  expansion.norm
bpk-lib/crates/macbat/compiler/specimens/operation/with_title/: contract.ir  decl.rs  expanded.rs  expansion.norm
bpk-lib/crates/macbat/compiler/specimens/projection/bounded_state/: contract.ir  decl.rs  expanded.rs  expansion.norm
bpk-lib/crates/macbat/compiler/specimens/projection/cached/: contract.ir  decl.rs  expanded.rs  expansion.norm
bpk-lib/crates/macbat/compiler/specimens/projection/event_sourced_counter/: contract.ir  decl.rs  (+2 more)
bpk-lib/crates/macbat/compiler/src/: artifact.rs  budget.rs  declaration.rs  diagnostic.rs  hygiene.rs  identity.rs  lib.rs  metrics.rs  normalize.rs  origin.rs  tokenize.rs  tokens.rs  trace.rs  validation.rs
bpk-lib/crates/macbat/compiler/src/diagnostic/: registry.rs
bpk-lib/crates/macbat/compiler/src/emit/: item_model.rs  mod.rs
bpk-lib/crates/macbat/compiler/src/grammar/: catalog.rs  kind_rule.rs  mod.rs
bpk-lib/crates/macbat/compiler/src/ir/: error.rs  event.rs  mod.rs  operation.rs  projection.rs  subscription.rs  variant_inventory.rs
bpk-lib/crates/macbat/compiler/src/lowering/: error.rs  event.rs  mod.rs  operation.rs  projection.rs  subscription.rs  variant_inventory.rs
bpk-lib/crates/macbat/compiler/tests/: budgets.rs  grammar.rs  snapshot.rs
bpk-lib/crates/macbat/macros/: Cargo.toml
bpk-lib/crates/macbat/macros/src/: adapter.rs  lib.rs
bpk-lib/crates/macbat/macros/tests/: error_derive.rs  positive_parse.rs  trybuild.rs  variant_inventory.rs
bpk-lib/crates/macbat/macros/tests/trybuild_negative/: error_dollar_arg.rs  error_dollar_arg.stderr  error_duplicate_error_attr.rs  error_duplicate_error_attr.stderr  error_from_multi_field.rs  error_from_multi_field.stderr  error_missing_error_attr.rs  error_missing_error_attr.stderr  error_on_struct.rs  error_on_struct.stderr  error_two_source_fields.rs  error_two_source_fields.stderr  error_unmatched_brace.rs  error_unmatched_brace.stderr  error_unterminated_brace.rs  error_unterminated_brace.stderr  event_category_overflow.rs  event_category_overflow.stderr  event_duplicate_key.rs  event_duplicate_key.stderr  event_generic.rs  event_generic.stderr  event_missing_attr.rs  event_missing_attr.stderr  event_missing_key.rs  event_missing_key.stderr  event_multiple_attrs.rs  event_multiple_attrs.stderr  event_on_enum.rs  event_on_enum.stderr  event_on_tuple_struct.rs  event_on_tuple_struct.stderr  event_on_unit_struct.rs  event_on_unit_struct.stderr  event_reserved_category_0x0.rs  event_reserved_category_0x0.stderr  event_reserved_category_0xD.rs  event_reserved_category_0xD.stderr  event_type_id_12bit.rs  event_type_id_12bit.stderr  (+70 more)
bpk-lib/crates/macbat/registration/: Cargo.toml  DEATH_WARRANT.md
bpk-lib/crates/macbat/registration/src/: lib.rs
bpk-lib/crates/netbat/: Cargo.toml  README.md
bpk-lib/crates/netbat/src/: lib.rs  route.rs  transport.rs
bpk-lib/crates/netbat/src/transport/: error.rs  frame.rs  mod.rs  stream_frame.rs  stream_tcp.rs  stream_tcp_runtime_fault.rs  stream_tcp_tests.rs  stream_tcp_tls.rs  stream_tcp_tls_tests.rs  tcp.rs  tls.rs
bpk-lib/crates/netbat/tests/: boundary.rs  mutation_kill_netbat-transport-round2.rs  property.rs  route_validation.rs  tcp_transport.rs  tls_subscription.rs  tls_transport.rs
bpk-lib/crates/netbat/tests/golden/: request_decode_input.hex  request_input_too_large.hex
(+1313 files in other folders)
