[package]
name = "netbat"
version = "0.8.3"
edition = "2021"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Thin sync-first server/network boundary exposure layer for syncbat."
repository = "https://github.com/freebatteryfactory/batpak"
homepage = "https://github.com/freebatteryfactory/batpak"
documentation = "https://docs.rs/netbat"
readme = "README.md"
keywords = ["event-sourcing", "network", "sync", "server"]
categories = ["network-programming"]

[features]
default = []
# Opt-in server-only TLS transport. The default build pulls NEITHER rustls nor
# rustls-pemfile, preserving netbat's thin-crate identity; every TLS type, dep,
# and code path is gated behind this feature.
tls = ["dep:rustls", "dep:rustls-pemfile"]

[dependencies]
syncbat = { path = "../syncbat", version = "0.8.3" }
flume = "0.12"
# Tracing spans around the accept loop, per-connection serve, and
# dispatch are emitted from the wire layer. Subscribers come from
# the binary.
tracing = "0.1"
# Server-only TLS (feature = "tls"). Optional, so absent from the default build
# graph. Pinned to the ring crypto provider (default-features off) to keep the
# build off the aws-lc-rs C/cmake toolchain.
rustls = { version = "0.23", optional = true, default-features = false, features = [
    "ring",
    "std",
    "tls12",
    "logging",
] }
rustls-pemfile = { version = "2", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "boundary"
harness = false

[lints]
workspace = true
