[package]
name = "macbat-registration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "Temporary phase-bridge runtime registration types for the macbat macro surface. See DEATH_WARRANT.md."

[lints]
workspace = true

[dependencies]
inventory = "0.3"
# Lane-neutral value type for registered schema upcast steps. The chain runner
# in batpak core operates on rmpv::Value so one migration serves both the JSON
# and raw-msgpack replay lanes. Pinned exactly to the rmp line rmp-serde =1.3.1 uses.
rmpv = "=1.3.1"
